--- a/angular.json
+++ b/angular.json
@@ -116,7 +116,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "styles.css"
               
             ],
             "scripts": []
